--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,43 +2,26 @@
 layout: default
 ---
 
-{% capture pretty_date %}
-  {% assign day = page.date | date: "%-d"  %}
-  {{ page.date | date: "%B" }}
-  {% case day %}{% when '1' or '21' or '31' %}{{ day }}st{% when '2' or '22' %}{{ day }}nd{% when '3' or '23' %}{{ day }}rd{% else %}{{ day }}th{% endcase %}{{ page.date | date: ", %Y" }}
-{% endcapture %}
+<article class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
+  {{ content }}
+</article>
 
-<main class="post" role="main">
-  <div class="post__head">
-    <h1 class="post__title"> {{ page.title }} </h1>
-    <time class="post__date" datetime="{{ page.date | date_to_xmlschema }}"> {{ pretty_date }} </time>
-    <div class="post__labels">
-    {% if page.category %} <a href="{{ site.baseurl }}/category/{{ page.category }}" class="post__category">{{ page.category }}</a>{% endif %}
-    {% if page.tags %}{% for tag in page.tags %} <a href="{{ site.baseurl }}/tag/{{ tag }}" class="post__tag">{{ tag }}</a>{% endfor %}{% endif %}
-    </div>
-  </div>
-  <div class="post__body">
-    {{ content }}
-  </div>
-</main>
-
-{% comment %}
-{% endcomment %}
-
-{% if page.reddit_post %}
-  <section class="comments">
-    {% if page.featured_comments %}
-      {% assign call_to_action = "Join the Discussion" %}
-
-      <h2>Featured Comments</h2>
-      {% for comment in page.featured_comments %}
-      <div class="reddit-embed" data-embed-media="www.redditmedia.com" data-embed-parent="{% if comment.context %}true{% else %}false{% endif %}" data-embed-live="{% if comment.freeze %}false{% else %}true{% endif %}"><a href="{{ comment.url }}"></a></div>
-      {% endfor %}
-
-      <script async src="https://www.redditstatic.com/comment-embed.js"></script>
-    {% else %}
-      {% assign call_to_action = "Comments" %}
-    {% endif %}
-    <a href="{{ page.reddit_post }}" target="_blank" class="comments__cta">{{ call_to_action }}</a>
-  </section>
+{% if site.related_posts != empty %}
+<aside class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ site.baseurl }}{{ post.url }}">
+            {{ post.title }}
+            <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</aside>
 {% endif %}
